wts2-1050/Florida Too Project

--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,5 @@
-TAG: partnerofload-6-0-22-?
-DATE: ???
-STAFF: ???
+TAG: partnerofload-6-0-22-1
+DATE: 04/27/2022
+STAFF: sc
 CHANGES: Project FL2b new load
+wts2-1050/Florida Too Project
